app/list: fix table alignment in firefox

--- a/apps/static_files/css/apps/pages/list.css
+++ b/apps/static_files/css/apps/pages/list.css
@@ -18,3 +18,7 @@ i.icono-plus {
 .loader {
   clear: both;
 }
+
+.table {
+    clear: both;
+}
